# user-management-rust

./: .env  .env.dist  .gitignore  Cargo.toml  README.md
migrations/2020-12-25-164359_add_users/: up.sql
src/: errors.rs  handlers.rs  jwt.rs  main.rs  models.rs  schema.rs
